--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^7.0.2"
+  },
+  "engines": {
+    "node": ">=20.19.0"
   }
 }
