--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "prettier": "prettier --write .",
     "preview": "vite preview",
-    "prepare": "husky"
+    "prepare": "husky",
+    "format": "npx stylelint '**/*.{css,less,module.less}' --fix && npx prettier --write ."
   },
   "dependencies": {
     "less": "^4.4.1",
@@ -31,6 +32,7 @@
     "prettier": "^3.6.2",
     "stylelint": "^16.23.1",
     "stylelint-config-standard-less": "^3.0.1",
+    "stylelint-order": "^7.0.0",
     "stylelint-prettier": "^5.0.3",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.40.0",
